@@ -1,0 +1,1 @@
+create table tbl_created_by_init(i int);
